[package]
name = "qbjs_deserializer_cxx"
version = "0.0.2"
edition = "2021"
authors = ["Alexandre Poirot <alexandre.poirot+qbjs_deserializer@gmail.com>"]
description = "C++ FFI for the qbjs_deserializer crate"
readme = "README.md"
homepage = "https://github.com/loreilei/qbjs_deserializer_cxx"
repository = "https://github.com/loreilei/qbjs_deserializer_cxx"
license = "MIT"
license_file = "LICENSE.txt"
keywords = ["Qt5", "binary", "json", "deserialize"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
bench = false
path = "src/qbjs_deserializer.rs"

[dependencies]
qbjs_deserializer = "0.0.2"
cxx = "1.0.75"
anyhow = "1.0.65"

[build-dependencies]
cxx-build = "1.0"
